--- a/index.html
+++ b/index.html
@@ -2,31 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>multiplication game</title>
+    <title>Grini Youssef</title>
     <link rel="stylesheet" href="style.css">
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="script.js"></script>
 </head>
-<body>
-    <div id="div1">
-        <div id="menu">
-            <button class="play">Play</button>
-            <button class="reset">Reset</button>
-        </div>
-        <div id="questionDiv">
-            <p class="resultQuestion"><span></span>the result of answer (good or oups)</p>
-            <div>
-                <p id="question">? x ? = ?</p>
+<body class="bg-purple">
+        
+    <div class="stars">
+        <div class="custom-navbar">
+            <div class="brand-logo">
+                <img src="http://salehriaz.com/404Page/img/logo.svg" width="80px">
             </div>
-            <div id="answers">
-                <button id="button1">?</button>
-                <button id="button2">?</button>
-                <button id="button3">?</button>
-                <button id="button4">?</button>
-            </div>
-            <p class="currentQuestion">question of 10</p>
         </div>
+        <div class="central-body">
+            <p class="msg">
+                The site is not available currently <br/>
+                    It is under construction
+            </p>
+        </div>
+        <div class="objects">
+            <img class="object_rocket" src="http://salehriaz.com/404Page/img/rocket.svg" width="40px">
+            <div class="earth-moon">
+                <img class="object_earth" src="http://salehriaz.com/404Page/img/earth.svg" width="100px">
+                <img class="object_moon" src="http://salehriaz.com/404Page/img/moon.svg" width="80px">
+            </div>
+            <div class="box_astronaut">
+                <img class="object_astronaut" src="http://salehriaz.com/404Page/img/astronaut.svg" width="140px">
+            </div>
+        </div>
+        <div class="glowing_stars">
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+
+        </div>
+
     </div>
+
 </body>
 </html>
 
